--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@varlet/ui": "^1.26.9",
     "animate.css": "^4.1.1",
     "vant": "^3.4.7",
     "vue": "^3.2.25",
